# maze

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  release.sh  requirements.txt  setup.py
.github/workflows/: ci.yml
src/maze/: collisions.py  interactions.py  main.py  objects.py  play_area.py  play_map.py  play_objects.py  side_bar.py  state.py  walls.py
tests/: collisions_test.py  interactions_test.py  objects_test.py  play_area_test.py  play_map_test.py  play_objects_test.py  side_bar_test.py  state_test.py  walls_test.py
