[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "kitty-maze"
version = "1.1.1"
description = "kitty maze game"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "kitty-common>=0.5.5",
    "kitty-escape>=1.3.1",
    "pyrefly==0.40.0",
    "pygame>=2.1.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/rchen152/maze"

[project.scripts]
kitty-maze = "maze.main:main"

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-pyproject",
    "pytest",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.flake8]
extend-ignore = ["F403", "F405", "W504"]
max-line-length = 80

[tool.pyrefly]
untyped-def-behavior = "check-and-infer-return-any"
errors.bad-override = false
